--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form</title>
+    <link rel="stylesheet" href="/Form/styles.css" />
+  </head>
+  <body>
+    <form>
+      <label>Gmail:</label>
+      <input type="gmail" placeholder="Gmail" />
+      <label>Password:</label>
+      <input type="password" placeholder="Password" />
+      <button type="button">Login</button>
+    </form>
+  </body>
+</html>
